# WSEML

./: .gitignore  CMakeLists.txt  README.md
doc/: readme7.txt
lib_gmp-6.3.0/: .gitignore
lib_gmp-6.3.0/include/: gmp.h
wseml_class_code/: CMakeLists.txt  main.cpp
wseml_class_code/doc/: task1.tex  task2.tex  task3.tex  task4.tex  task5.tex  task6.txt
wseml_class_code/include/: WSEML.h  dllconfig.h  helpFunc.h  lists.h  misc.h  parser.h  pointers.h  stringconverter.h
wseml_class_code/src/: WSEML.cpp  helpFunc.cpp  misc.cpp  parser.cpp  pointers.cpp
wseml_class_code/src/arch/unix/: funcCall.cpp
wseml_class_code/src/arch/win32/: funcCall.cpp
wseml_code/: CMakeLists.txt
wseml_code/includes/: wseml7.hpp
wseml_code/src/: debug7.cpp  examples.cpp  locale.cpp  main7.cpp  wseml7.cpp
wseml_code/w_logs/: log7_10.txt  log7_2.txt  log7_4.txt  log7_6.txt  log7_7.txt  log7_8.txt  log7_9.txt  plan.txt  readme7.txt
wseml_code/w_programs/: prog7_1.w  prog7_10.w  prog7_11.w  prog7_12.w  prog7_13.w  prog7_2.w  prog7_3.w  prog7_4.w  prog7_5.w  prog7_6.w  prog7_7.w  prog7_8.w  prog7_9.w
